# machytech-core

./: .gitignore  Dockerfile  README.md
chat-server/: .gitignore  README.md  meson.build
chat-server/include/: message.hpp
chat-server/src/: main.cpp
code/: .gitignore  CMakeLists.txt
code/build-arm/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  app  cmake_install.cmake
code/include/: envs.h  scene.h
code/lib/api/: .gitignore  CMakeLists.txt
code/lib/api/include/: api.h  http_async_api.h  sync_api.h  tcp_async_client_api.h
code/lib/api/samples/: async_client.cpp  async_httpserver.cpp  async_server.cpp  client.cpp  server.cpp
code/lib/api/src/: api.cpp  http_async_api.cpp  sync_api.cpp  tcp_async_client_api.cpp
code/lib/machycore/: CMakeLists.txt
code/lib/machycore/include/: machycore.h
code/lib/machycore/src/: machycore.cpp
code/lib/machygl/: CMakeLists.txt
code/lib/machygl/include/: machygl.h
code/lib/machygl/src/: machygl.cpp
code/lib/machyscenes/: CMakeLists.txt
code/lib/machyscenes/include/: machyscene.h
code/lib/machyscenes/src/: machyscene.cpp
code/machyapi/: CMakeLists.txt
code/machyapi/include/: machyapi.h  machysockets.h
code/machyapi/samples/: async_posclient.cpp  async_trajectoryclient.cpp
code/machyapi/src/: machyapi.cpp  machysockets.cpp
code/samples/: async_server.cpp  plotdata.cpp  sync_client.cpp  trajsim.cpp
code/shader/: basic.frag  basic.vert  plot.frag  plot.vert  wide-line.vert
code/src/: machy_utils.cpp  machyscene.cpp  main.cpp  scene.cpp
code/src/shader/: basic.vert  wide-line.vert
dev-tools/process_handler/: ..env.shared.swp  .env.secret  .env.shared  run.py
dev-tools/process_handler/utils/: m_arguments.py  m_enums.py  m_environment.py  m_logger.py
scripts/: installmachyXserver.sh  machyXserver.service  machyXserver.sh
tests/: client-sim.py  client.py  machy_utils.h
tests/api/: client.py  server.py
tests/depr/: main.cpp
websocket-server/: README.md  machywebsocket.py
websocket-server/python/depr/: machywebsocket.py
websocketserver/: __init__.py  __main__.py  websocket.env
websocketserver/utils/: __init__.py
